corrected spaces and alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* Body Section */
@@ -9,6 +10,7 @@ body {
   font-family: sans-serif;
   color: #444;
   border-top: 10px solid #1098ad;
+  border-width: 1200px;
   position: relative;
 }
 
@@ -85,6 +87,7 @@ h3 {
 h4 {
   font-size: 20px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 /* Paragraph Section */
@@ -128,6 +131,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 /* Related Posts */
@@ -135,7 +139,6 @@ li:last-child {
   /* background-color: #f7f7f7; */
   border-top: #1098ad solid 5px;
   border-bottom: #1098ad solid 5px;
-  padding: 50px 0;
   margin-left: 0;
   /* margin-right: 50px; */
   /* width: 500px; */
@@ -203,6 +206,7 @@ aside {
   /* background-color: #ffe70e; */
   width: 300px;
   float: right;
+  padding: 50px 40px;
 }
 
 footer {
